--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "buildhost": "ng build --prod --base-href=\"https://jhartrick.github.io/ChiChiNg/\" && ngh"
+    "buildhost": "ng build --prod --base-href=\"https://jhartrick.github.io/ChiChiNg/\" && ./node_modules/.bin/ngh"
   },
   "private": true,
   "dependencies": {
@@ -42,6 +42,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "angular-cli-ghpages": "^0.5.2",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
