--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "angular-cli-ghpages": "^0.5.2",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
+    "jasmine-node": "^1.14.5",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
